# rust-news-trader

./: README.md
binance_news_rust/: Cargo.toml
binance_news_rust/src/: main.rs  position_leverage.rs  price_information.rs  symbols_exchange_info.rs  test.rs
news_rust/: Cargo.toml
news_rust/src/: main.rs  order_information.rs  order_response.rs  price_information.rs  symbol_information.rs  tree_response.rs
