[package]
name = "binance_news_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = {version = "0.11.23", features = ["blocking", "json"]}
serde = {version = "1.0.196", features = ["derive"]}
serde_json = "1.0.112"
hmac = "0.12.1"
hex = "0.4.3"
sha2 = "0.10.8"
chrono = "0.4.33"
tokio = {version = "1.36.0", features = ["macros"]}
log = "0.4.20"
env_logger = "0.11.0"
regex = "1.10.3"
tokio-tungstenite = {version="0.21.0", features = ["native-tls"]}
url = "2.5.0"
futures = "0.3.30"
fraction = "0.15.0"
