[package]
name = "news_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
reqwest = {version = "0.11.23", features = ["blocking", "json"]}
serde = {version = "1.0.196", features = ["derive"]}
serde_json = "1.0.112"
hmac = "0.12.1"
hex = "0.4.3"
sha2 = "0.10.8"
chrono = "0.4.33"
